num_enum/tests/try_build/compile_fail/missing_default.stderr
error: #[derive(FromPrimitive)] requires a variant marked with `#[default]`, `#[num_enum(default)]`, `#[catch_all]`, or `#[num_enum(catch_all)`
 --> tests/try_build/compile_fail/missing_default.rs:1:10
  |
1 | #[derive(num_enum::FromPrimitive)]
  |          ^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `num_enum::FromPrimitive` (in Nightly builds, run with -Z macro-backtrace for more info)
